--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Food Planner</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_name">Please Enter Your Name</string>
+    <string name="password">Enter Password</string>
+    <string name="email_filed">Enter Your Email</string>
+    <string name="con_password">Confirm Password</string>
+    <string name="login">Login</string>
 </resources>
