--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="email_filed">Enter Your Email</string>
     <string name="con_password">Confirm Password</string>
     <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="skip">Skip</string>
+    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
+    <string name="already_have_account">Already Have an account ?</string>
+    <string name="name_filed">Enter your Name</string>
 </resources>
